# ai-dev-cli

./: .env.example  .gitignore  PROGRESS.md  README.md  SECURITY-REVIEW.md  VALIDATION-REPORT.md  notify-complete.py  pyproject.toml  trust_metrics.json
.subagents/: code-review-step.json  templates-expansion.json  vercel-integration.json
ai_dev_cli/: __init__.py  agent.py  agent_refine.py  cli.py  multi_agent.py  providers.py  providers_chinese.py  providers_gemini.py  trust_metrics.py  vercel_deploy.py
docs/: LAUNCH-MATERIALS.md  MULTI-AGENT.md
templates/: README.md
templates/ai-dashboard/: manifest.json
templates/api-wrapper/: manifest.json
templates/tweet-summarizer/: manifest.json
tests/: test_cli.py
